extracting distribution&home from DescriptorsHandler