@@ -4,8 +4,8 @@
  *
  * Name: <DescriptorsHandler.java>
  * Created: <28/10/2020, 10:50:39 PM>
- * Modified: <07/11/2020, 02:24:33 PM>
- * Version: <121>
+ * Modified: <07/11/2020, 07:54:00 PM>
+ * Version: <129>
  */
 
 package worder.launcher.model;
@@ -17,25 +17,17 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.LinkedList;
-import java.util.Objects;
 
 public class DescriptorsHandler {
-    private static boolean useCustomWorderHome = false;
-    private static final String worderDistribution = "https://dl.bintray.com/evgen8/generic/";
-    private static Path localArtifactsPath;
-    private static Path worderHomePath;
-
     private final UiHandler uiHandler;
+    private final URL worderDistribution;
+    private final URL worderHome;
 
 
-    public DescriptorsHandler(UiHandler uiHandler) {
+    public DescriptorsHandler(UiHandler uiHandler, URL worderDistribution, URL worderHome) {
         this.uiHandler = uiHandler;
-
-        uiHandler.status("Detecting Worder-GUI's home catalog ...");
-
-        if (!useCustomWorderHome)
-            setWorderHome(detectWorderHome());
+        this.worderDistribution = worderDistribution;
+        this.worderHome = worderHome;
     }
 
 
@@ -50,8 +42,8 @@ public class DescriptorsHandler {
             uiHandler.criticalError("Neither local nor remote descriptor is accessible!");
         if (localDescriptor != null && remoteDescriptor == null)
             return;
-        if (localDescriptor != null && localDescriptor.getVersion() == remoteDescriptor.getVersion())
-            return;
+//        if (localDescriptor != null && localDescriptor.getVersion() == remoteDescriptor.getVersion())
+//            return;
 
         if (localDescriptor == null)
             //noinspection ConstantConditions
@@ -60,93 +52,55 @@ public class DescriptorsHandler {
             syncWorderHome(localDescriptor, remoteDescriptor);
     }
 
-    public Path getWorderHomePath() {
-        return worderHomePath;
-    }
-
-
-    public static void setCustomWorderHome(String customWorderHome) {
-        useCustomWorderHome = true;
-        setWorderHome(customWorderHome);
-    }
-
-    private static void setWorderHome(String newWorderHome) {
-        worderHomePath = Path.of(newWorderHome);
-        localArtifactsPath = worderHomePath.resolve("artifacts");
-    }
-
 
     private void syncWorderHome(AppDescriptor remoteDescriptor, AppDescriptor localDescriptor) {
-        var toRemove = new LinkedList<>(localDescriptor.getAllArtifacts());
-        var toDownload = new LinkedList<>(remoteDescriptor.getAllArtifacts());
-
-        toRemove.removeAll(remoteDescriptor.getAllArtifacts());
-        toDownload.removeAll(localDescriptor.getAllArtifacts());
-
-        toRemove.forEach(artifacts -> {
-            uiHandler.status("Removing " + artifacts.getName() + " ...");
-            try {
-                Files.delete(localArtifactsPath.resolve(artifacts.getName()));
-            } catch (IOException ioException) {
-                ioException.printStackTrace();
-            }
-        });
-
-        toDownload.forEach(artifact -> {
-            uiHandler.status("Downloading " + artifact.getName() + " ...");
-            try {
-                Files.write(
-                        localArtifactsPath.resolve(artifact.getName()),
-                        Objects.requireNonNull(downloadFile("artifacts/" + artifact.getName()))
-                );
-            } catch (IOException ioException) {
-                ioException.printStackTrace();
-            }
-        });
+//        var toRemove = new LinkedList<>(localDescriptor.getAllArtifacts());
+//        var toDownload = new LinkedList<>(remoteDescriptor.getAllArtifacts());
+//
+//        toRemove.removeAll(remoteDescriptor.getAllArtifacts());
+//        toDownload.removeAll(localDescriptor.getAllArtifacts());
+//
+//        toRemove.forEach(artifacts -> {
+//            uiHandler.status("Removing " + artifacts.getName() + " ...");
+//            try {
+//                Files.delete(localArtifactsPath.resolve(artifacts.getName()));
+//            } catch (IOException ioException) {
+//                ioException.printStackTrace();
+//            }
+//        });
+//
+//        toDownload.forEach(artifact -> {
+//            uiHandler.status("Downloading " + artifact.getName() + " ...");
+//            try {
+//                Files.write(
+//                        localArtifactsPath.resolve(artifact.getName()),
+//                        Objects.requireNonNull(downloadFile("artifacts/" + artifact.getName()))
+//                );
+//            } catch (IOException ioException) {
+//                ioException.printStackTrace();
+//            }
+//        });
     }
 
     private void syncWorderHome(AppDescriptor remoteDescriptor) {
-        try {
-            Files.createDirectories(localArtifactsPath);
-            Files.write(worderHomePath.resolve(remoteDescriptor.getName()), remoteDescriptor.toByteArray());
-
-            for (AppDescriptor.Artifact artifact : remoteDescriptor.getAllArtifacts()) {
-                uiHandler.status("Downloading " + artifact.getName() + " ...");
-                Files.write(
-                        localArtifactsPath.resolve(artifact.getName()),
-                        Objects.requireNonNull(downloadFile("artifacts/" + artifact.getName()))
-                );
-            }
-        } catch (IOException ioException) {
-            ioException.printStackTrace();
-        }
-    }
-
-    private String detectWorderHome() {
-        var currentOs = System.getProperty("os.name");
-        var userHomeCatalog = System.getProperty("user.home");
-
-        if (currentOs.equals("Linux"))
-            return userHomeCatalog + "/.worder-gui/";
-
-        throw new IllegalStateException("There's no support of Worder-Launcher for your OS: " + currentOs);
-    }
-
-    private byte[] downloadFile(String path) {
-        try {
-            var url = new URL(worderDistribution + path);
-            var inputStream = url.openStream();
-            var res = inputStream.readAllBytes();
-            inputStream.close();
-            return res;
-        } catch (IOException e) {
-            e.printStackTrace();
-            return null;
-        }
+//        try {
+//            Files.createDirectories(localArtifactsPath);
+//            Files.write(worderHomePath.resolve(remoteDescriptor.getName()), remoteDescriptor.toByteArray());
+//
+//            for (AppDescriptor.Artifact artifact : remoteDescriptor.getAllArtifacts()) {
+//                uiHandler.status("Downloading " + artifact.getName() + " ...");
+//                Files.write(
+//                        localArtifactsPath.resolve(artifact.getName()),
+//                        Objects.requireNonNull(downloadFile("artifacts/" + artifact.getName()))
+//                );
+//            }
+//        } catch (IOException ioException) {
+//            ioException.printStackTrace();
+//        }
     }
 
     private AppDescriptor obtainLocalDescriptor(String requiredDescriptorName) {
-        var requiredFile = worderHomePath.resolve(requiredDescriptorName);
+        var requiredFile = worderHome.resolve(requiredDescriptorName);
 
         if (Files.notExists(requiredFile))
             return null;
@@ -166,5 +120,18 @@ public class DescriptorsHandler {
             return null;
 
         return AppDescriptor.fromByteArray(remoteDescriptorBytes);
+    }
+
+    private byte[] downloadFile(String path) {
+        try {
+            var url = new URL(worderDistribution + path);
+            var inputStream = url.openStream();
+            var res = inputStream.readAllBytes();
+            inputStream.close();
+            return res;
+        } catch (IOException e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 }
